# chinese_poems_widget

./: README.md  package.json  pyproject.toml
backend/app/: README.md
backend/tests/: README.md
data/processed/: README.md  source_profile.chinese_poetry.json
data/raw/: README.md  source_manifest.json
data/samples/: README.md  poems.sample.jsonl  poems.sample.provenance.md
docs/: chinese-poetry-source-evaluation.md  data-schema.md  database-research.md  development-setup.md  github-codex-workflow.md  implementation-roadmap.md  phase-0-completion.md  planning-research.md  product-plan.md
experiments/agent/: README.md
experiments/recommendation/: README.md
extension/newtab/: README.md
frontend/app/: README.md
frontend/tests/: README.md
scripts/: verify_structure.py
scripts/data_import/: README.md  inspect_chinese_poetry.py  validate_poems.py
scripts/evaluation/: README.md
