[project]
name = "chinese-poems-widget"
version = "0.1.0"
description = "Personalized Chinese poetry recommendation system with AI content understanding and strong touchpoints."
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
